--- a/tools/export/codeblocks/cbp.tmpl
+++ b/tools/export/codeblocks/cbp.tmpl
@@ -13,9 +13,9 @@
 				<Option compiler="arm-elf-gcc" />
 				<Option use_console_runner="0" />
 				<Compiler>
-				        {%  for f in debug_flags -%}
+					{%  for f in debug_flags -%}
 					<Add option="{{f}}" />
-				        {%  endfor -%}
+					{%  endfor -%}
 				</Compiler>
 				<Linker>
 					<Add option='-Wl,-Map,&quot;bin/Debug/{{project_name}}.map&quot;' />
@@ -53,7 +53,7 @@
 			<Add option="{{f}}" />
 			{%  endfor -%}
 			{%  for f in include_paths -%}
-                        <Add directory="{{f}}" />
+			<Add directory="{{f}}" />
 			{%  endfor -%}
 		</Compiler>
 		<Linker>
@@ -84,6 +84,16 @@
 		</Unit>
 		{%  endfor -%}
 		<Extensions>
+		        {% if openocdboard != '' -%}
+			<debugger>
+				<remote_debugging target="Release">
+					<options conn_type="3" serial_baud="115200" pipe_command="openocd -p -l openocd.log -f {{openocdboard}}" additional_cmds='monitor reset halt&#x0A;monitor flash write_image erase &quot;bin/Release/{{project_name}}.elf&quot;&#x0A;file &quot;bin/Release/{{project_name}}.elf&quot;&#x0A;monitor reset halt&#x0A;' extended_remote="1" />
+				</remote_debugging>
+				<remote_debugging target="Debug">
+					<options conn_type="3" serial_baud="115200" pipe_command="openocd -p -l openocd.log -f {{openocdboard}}" additional_cmds='monitor reset halt&#x0A;monitor flash write_image erase &quot;bin/Debug/{{project_name}}.elf&quot;&#x0A;file &quot;bin/Debug/{{project_name}}.elf&quot;&#x0A;monitor reset halt&#x0A;' extended_remote="1" />
+				</remote_debugging>
+			</debugger>
+			{% endif -%}
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
